fix(projects): Align icon and text in project buttons

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -1410,6 +1410,10 @@ h1,
   display: flex;
 }
 
+.inline-flex {
+  display: inline-flex;
+}
+
 .aspect-square {
   aspect-ratio: 1 / 1;
 }
@@ -1420,6 +1424,14 @@ h1,
 
 .h-6 {
   height: 1.5rem;
+}
+
+.h-8 {
+  height: 2rem;
+}
+
+.h-7 {
+  height: 1.75rem;
 }
 
 .w-10 {
@@ -1436,6 +1448,14 @@ h1,
 
 .w-full {
   width: 100%;
+}
+
+.w-8 {
+  width: 2rem;
+}
+
+.w-7 {
+  width: 1.75rem;
 }
 
 .max-w-lg {
@@ -1468,6 +1488,10 @@ h1,
 
 .gap-6 {
   gap: 1.5rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
 }
 
 .rounded-full {
